[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/Settings.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Styles/SettingsPanel.stylebox" type="StyleBox" id=2]
[ext_resource path="res://Fonts/Open_Sans/OpenSans-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/MenuButton.gd" type="Script" id=4]
[ext_resource path="res://UI/Play_button1.png" type="Texture" id=5]
[ext_resource path="res://UI/Godot.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Updater.tscn" type="PackedScene" id=7]
[ext_resource path="res://Fonts/Open_Sans/OpenSans-Light.ttf" type="DynamicFontData" id=8]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.32549, 0.32549, 0.32549, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[sub_resource type="StreamTexture" id=6]
flags = 5
load_path = "res://.import/Play_button.png-77e5a5c6a9980c8e6c2f5a30e79d72cb.stex"

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.231373, 0.231373, 0.231373, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="DynamicFont" id=8]
size = 11
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.32549, 0.32549, 0.32549, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Settings" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -270.0
margin_top = -365.0
margin_right = 270.0
margin_bottom = 90.0
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -4.0

[node name="ItemUpdate" type="HTTPRequest" parent="."]

[node name="Update" type="HTTPRequest" parent="."]

[node name="Tabs" type="TabContainer" parent="."]
margin_right = 540.0
margin_bottom = 455.0
rect_pivot_offset = Vector2( -640, 169.5 )
custom_styles/panel = SubResource( 1 )
tab_align = 0

[node name="General" type="Panel" parent="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0
custom_styles/panel = SubResource( 2 )

[node name="Panel" type="Panel" parent="Tabs/General"]
margin_left = 70.0
margin_top = 65.0
margin_right = 480.0
margin_bottom = 226.0
custom_styles/panel = ExtResource( 2 )

[node name="Settings" type="Label" parent="Tabs/General"]
margin_left = 214.5
margin_right = 325.5
margin_bottom = 42.0
custom_fonts/font = SubResource( 3 )
text = "Settings"
align = 1
valign = 1

[node name="Sounds" type="Label" parent="Tabs/General"]
margin_left = 226.5
margin_top = 65.0
margin_right = 313.5
margin_bottom = 99.0
custom_fonts/font = SubResource( 4 )
text = "Sounds"
align = 1
valign = 1

[node name="Sounds2" type="Label" parent="Tabs/General"]
margin_left = 100.0
margin_top = 166.0
margin_right = 187.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 4 )
text = "Volume:"
align = 1
valign = 1

[node name="MenuButton" type="MenuButton" parent="Tabs/General"]
margin_left = 180.0
margin_top = 113.0
margin_right = 350.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 5 )
text = "Drum"
flat = false
items = [ "Drum", null, 0, false, false, -1, 0, null, "", false, "Piano 1", null, 0, false, false, -1, 0, null, "", false, "Piano 2", null, 0, false, false, -1, 0, null, "", false, "Guitar", null, 0, false, false, -1, 0, null, "", false, "Triangle", null, 0, false, false, -1, 0, null, "", false, "Beep", null, 0, false, false, -1, 0, null, "", false ]
script = ExtResource( 4 )

[node name="PlayButton" type="TextureButton" parent="Tabs/General"]
margin_left = 380.0
margin_top = 114.0
margin_right = 410.0
margin_bottom = 144.0
texture_normal = SubResource( 6 )
texture_pressed = ExtResource( 5 )
expand = true
stretch_mode = 4

[node name="Godot" type="TextureRect" parent="Tabs/General"]
visible = false
modulate = Color( 0.854902, 0.854902, 0.854902, 1 )
margin_left = 170.0
margin_top = 390.0
margin_right = 405.0
margin_bottom = 425.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="HSlider" type="HSlider" parent="Tabs/General"]
margin_left = 200.0
margin_top = 177.0
margin_right = 440.0
margin_bottom = 193.0
min_value = 0.001
max_value = 1.0
step = 0.001
value = 0.8
tick_count = 10
ticks_on_borders = true

[node name="Version" type="Label" parent="Tabs/General"]
margin_left = 220.0
margin_top = 350.0
margin_right = 321.0
margin_bottom = 364.0
grow_horizontal = 2
grow_vertical = 2
text = "App Version 0.0"
align = 1
valign = 1

[node name="Item_Version" type="Label" parent="Tabs/General"]
margin_left = 216.5
margin_top = 376.0
margin_right = 323.5
margin_bottom = 390.0
grow_horizontal = 2
text = "Item Version 0.0"
align = 1
valign = 1

[node name="CheckBox" type="CheckBox" parent="Tabs/General"]
visible = false
margin_left = 132.0
margin_top = 246.0
margin_right = 368.0
margin_bottom = 270.0
text = "Check for Updates Automatically"

[node name="Panel2" type="Panel" parent="Tabs/General"]
editor/display_folded = true
visible = false
margin_left = 120.0
margin_top = 177.5
margin_right = 420.0
margin_bottom = 277.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Tabs/General/Panel2"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -32.5
margin_bottom = -1.5
text = "No updates available."
align = 1
valign = 1
autowrap = true

[node name="Button" type="Button" parent="Tabs/General/Panel2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -23.5
margin_top = 7.5
margin_right = 23.5
margin_bottom = 27.5
text = "Close"

[node name="Updater" parent="Tabs/General" instance=ExtResource( 7 )]
visible = false

[node name="Button" type="Button" parent="Tabs/General"]
visible = false
margin_left = 185.0
margin_top = 292.0
margin_right = 355.0
margin_bottom = 312.0
grow_horizontal = 2
grow_vertical = 2
text = "Check for Updates"

[node name="SoundMinimized" type="Panel" parent="Tabs/General"]
margin_left = 70.0
margin_top = 235.0
margin_right = 480.0
margin_bottom = 275.0
custom_styles/panel = SubResource( 7 )

[node name="Label" type="Label" parent="Tabs/General/SoundMinimized"]
margin_left = 19.0
margin_top = 8.0
margin_right = 153.0
margin_bottom = 22.0
text = "Sound when minimized:"

[node name="OptionButton" type="OptionButton" parent="Tabs/General/SoundMinimized"]
margin_left = 290.0
margin_top = 5.0
margin_right = 387.0
margin_bottom = 29.0
text = "Dim"
align = 1
items = [ "Dim", null, false, 0, null, "Mute", null, false, 1, null, "Always on", null, false, 2, null ]
selected = 0

[node name="Offset" type="Panel" parent="Tabs/General"]
margin_left = 70.0
margin_top = 284.0
margin_right = 480.0
margin_bottom = 331.0
custom_styles/panel = SubResource( 7 )

[node name="Label" type="Label" parent="Tabs/General/Offset"]
margin_left = 19.0
margin_top = 8.0
margin_right = 153.0
margin_bottom = 22.0
text = "Eorzea Time Offset:"

[node name="Label2" type="Label" parent="Tabs/General/Offset"]
margin_left = 19.0
margin_top = 26.0
margin_right = 238.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 8 )
text = "*Use if app time has drifted from game time"

[node name="OptionButton" type="SpinBox" parent="Tabs/General/Offset"]
margin_left = 290.0
margin_top = 5.0
margin_right = 387.0
margin_bottom = 29.0
min_value = -10000.0
max_value = 10000.0
align = 1

[node name="Overlay" type="Panel" parent="Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0
custom_styles/panel = SubResource( 9 )

[node name="Opacity" type="Panel" parent="Tabs/Overlay"]
margin_left = 30.0
margin_top = 43.0
margin_right = 380.0
margin_bottom = 83.0
custom_styles/panel = SubResource( 7 )

[node name="Label" type="Label" parent="Tabs/Overlay/Opacity"]
margin_left = 20.0
margin_top = 8.0
margin_right = 126.0
margin_bottom = 22.0
text = "Overlay Opacity:"

[node name="SpinBox" type="SpinBox" parent="Tabs/Overlay/Opacity"]
margin_left = 264.0
margin_top = 3.0
margin_right = 338.0
margin_bottom = 27.0
step = 25.0
value = 50.0
rounded = true
align = 1
suffix = "%"

[node name="Visible" type="Panel" parent="Tabs/Overlay"]
margin_left = 30.0
margin_top = 103.0
margin_right = 380.0
margin_bottom = 143.0
custom_styles/panel = SubResource( 7 )

[node name="Label" type="Label" parent="Tabs/Overlay/Visible"]
margin_left = 19.0
margin_top = 8.0
margin_right = 153.0
margin_bottom = 22.0
text = "No. of Items Visible:"

[node name="SpinBox" type="SpinBox" parent="Tabs/Overlay/Visible"]
margin_left = 264.0
margin_top = 3.0
margin_right = 338.0
margin_bottom = 27.0
max_value = 10.0
value = 4.0
rounded = true
align = 1

[node name="CloseButton" type="Panel" parent="Tabs/Overlay"]
margin_left = 30.0
margin_top = 163.0
margin_right = 380.0
margin_bottom = 203.0
custom_styles/panel = SubResource( 7 )

[node name="Label" type="Label" parent="Tabs/Overlay/CloseButton"]
margin_left = 19.0
margin_top = 8.0
margin_right = 153.0
margin_bottom = 22.0
text = "Close Button Orientation:"

[node name="OptionButton" type="OptionButton" parent="Tabs/Overlay/CloseButton"]
margin_left = 229.0
margin_top = 5.0
margin_right = 326.0
margin_bottom = 29.0
text = "Adaptive"
align = 1
items = [ "Adaptive", null, false, 0, null, "Left", null, false, 1, null, "Right", null, false, 2, null ]
selected = 0

[node name="HiddenSound" type="Panel" parent="Tabs/Overlay"]
margin_left = 30.0
margin_top = 221.0
margin_right = 380.0
margin_bottom = 261.0
custom_styles/panel = SubResource( 7 )

[node name="Label" type="Label" parent="Tabs/Overlay/HiddenSound"]
margin_left = 19.0
margin_top = 8.0
margin_right = 153.0
margin_bottom = 22.0
text = "Sound When Hidden:"

[node name="OptionButton" type="OptionButton" parent="Tabs/Overlay/HiddenSound"]
margin_left = 229.0
margin_top = 5.0
margin_right = 326.0
margin_bottom = 29.0
rect_min_size = Vector2( 106, 24 )
text = "Mute"
align = 1
items = [ "Mute", null, false, 0, null, "Dim", null, false, 1, null, "Always On", null, false, 2, null ]
selected = 0

[node name="Endless" type="Panel" parent="Tabs/Overlay"]
visible = false
margin_left = 30.0
margin_top = 222.0
margin_right = 380.0
margin_bottom = 262.0
custom_styles/panel = SubResource( 7 )

[node name="Label" type="Label" parent="Tabs/Overlay/Endless"]
margin_left = 19.0
margin_top = 8.0
margin_right = 153.0
margin_bottom = 22.0
text = "Show Endless Items:"

[node name="OptionButton" type="CheckBox" parent="Tabs/Overlay/Endless"]
margin_left = 229.0
margin_top = 5.0
margin_right = 326.0
margin_bottom = 29.0
pressed = true
text = "Show"
align = 1
[connection signal="request_completed" from="ItemUpdate" to="." method="_on_ItemUpdate_request_completed"]
[connection signal="request_completed" from="Update" to="." method="_on_Update_request_completed"]
[connection signal="pressed" from="Tabs/General/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="value_changed" from="Tabs/General/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="Tabs/General/Panel2/Button" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="Tabs/General/Button" to="." method="_on_Update_pressed"]
